--- a/index.html
+++ b/index.html
@@ -1,45 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
+    <link rel="stylesheet" href="/styles.css" />
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+    <title>Four Card Feature Section</title>
+  </head>
+  <body>
+    <div class="main-container">
+      <div class="header-container">
+        <h1 class="main-header">Reliable, efficient delivery</h1>
+        <h1 class="main-sub-header">Powered by Technology</h1>
+        <p class="main-description">
+          Our Artificial Intelligence powered tools use millions of project data
+          points to ensure that your project is successful
+        </p>
+      </div>
+      <div class="cards-container">
+        <div class="card supervisor">
+          <div class="card-text-area">
+            <h2 class="card-title">Supervisor</h2>
+            <p class="card-text">
+              Monitors activity to identify project roadblocks
+            </p>
+          </div>
+          <img
+            class="card-image"
+            src="/images/icon-supervisor.svg"
+            alt="supervisor"
+          />
+        </div>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+        <div class="card team-builder">
+          <div class="card-text-area">
+            <h2 class="card-title">Team Builder</h2>
+            <p class="card-text">
+              Scans our talent network to create the optimal team for your
+              project
+            </p>
+          </div>
+          <img
+            class="card-image"
+            src="/images/icon-team-builder.svg"
+            alt="team-builder"
+          />
+        </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+        <div class="card karma">
+          <div class="card-text-area">
+            <h2 class="card-title">Karma</h2>
+            <p class="card-text">
+              Regularly evaluates our talent to ensure quality
+            </p>
+          </div>
+          <img class="card-image" src="/images/icon-karma.svg" alt="karma" />
+        </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+        <div class="card calculator">
+          <div class="card-text-area">
+            <h2 class="card-title">Calculator</h2>
+            <p class="card-text">
+              Uses data from past projects to provide better delivery estimates
+            </p>
+          </div>
+          <img
+            class="card-image"
+            src="/images/icon-calculator.svg"
+            alt="calculator"
+          />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
