--- a/index.html
+++ b/index.html
@@ -40,32 +40,32 @@
             alt="supervisor"
           />
         </div>
-
-        <div class="card team-builder">
-          <div class="card-text-area">
-            <h2 class="card-title">Team Builder</h2>
-            <p class="card-text">
-              Scans our talent network to create the optimal team for your
-              project
-            </p>
+        <div class="middle-card-section">
+          <div class="card team-builder">
+            <div class="card-text-area">
+              <h2 class="card-title">Team Builder</h2>
+              <p class="card-text">
+                Scans our talent network to create the optimal team for your
+                project
+              </p>
+            </div>
+            <img
+              class="card-image"
+              src="/images/icon-team-builder.svg"
+              alt="team-builder"
+            />
           </div>
-          <img
-            class="card-image"
-            src="/images/icon-team-builder.svg"
-            alt="team-builder"
-          />
-        </div>
 
-        <div class="card karma">
-          <div class="card-text-area">
-            <h2 class="card-title">Karma</h2>
-            <p class="card-text">
-              Regularly evaluates our talent to ensure quality
-            </p>
+          <div class="card karma">
+            <div class="card-text-area">
+              <h2 class="card-title">Karma</h2>
+              <p class="card-text">
+                Regularly evaluates our talent to ensure quality
+              </p>
+            </div>
+            <img class="card-image" src="/images/icon-karma.svg" alt="karma" />
           </div>
-          <img class="card-image" src="/images/icon-karma.svg" alt="karma" />
         </div>
-
         <div class="card calculator">
           <div class="card-text-area">
             <h2 class="card-title">Calculator</h2>
